Revert "[Fix] Horizontal overflow in footer(1)"
This reverts commit b9a684d6f91f773e4b1c21957e91f8c2772ed73b.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,6 @@ div.col-sm-3.base-map {
 	padding-left: 0;
 	padding-right: 0;
 	overflow: scroll;
-	overflow-x: hidden;
 }
 
 .base-footer p {
